--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
  The app can also check to see if the addition of two amounts will equate to an amount on the bank statement. 
 Once the app has check every amount for matches, it will append the results to the row to the right of the amounts, 
 and save the workbooks.</p>
+<h2>BlackboardInfoGrabber</h2>
+<p>Located in Misc Projects. This program will take a screen shot of certain elements within blackboard (my calendar and grades.)
+ I've set the app up on a cron schedule to run biweekly on Monday and Friday. Note that certain information 
+ has been removed from this copy of the app.</p>
 </body>
 </html>
