new file:   Misc Projects/playbedtimetunes.py 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@ and save the workbooks.</p>
 <p>Located in Misc Projects. This program will take a screen shot of certain elements within blackboard (my calendar and grades.)
  I've set the app up on a cron schedule to run biweekly on Monday and Friday. Note that certain information 
  has been removed from this copy of the app.</p>
+ <h2>playbedtimetunes</h2>
+ <p>Located in Misc Projects. I use this program to play a specific playlist for a spceific time in minutes. I can run this program, 
+ pick my playlist, and fall asleep while it plays. When enough time passes the browser will close. Check out the links in the list for 
+relaxing playlists.</p>
 </body>
 </html>
