updated index to detail new reconcile.py file

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@ and save the workbooks.</p>
  <p>Located in Misc Projects. I use this program to play a specific playlist for a spceific time in minutes. I can run this program, 
  pick my playlist, and fall asleep while it plays. When enough time passes the browser will close. Check out the links in the list for 
 relaxing playlists.</p>
+<h2>reconcile</h2>
+<p>I created this program to help reconcile accounts as an accountant. Some of the excel files I work with are thousands of lines long. 
+this program will extract amounts from an excel file and search for numbers that match together to 0. reconcile will also print out all 
+of the amounts that don't match, and optionally I can write these amounts to another excel file for later analysis.</p>
 </body>
 </html>
